--- a/api/Gemfile
+++ b/api/Gemfile
@@ -30,6 +30,8 @@ gem 'bootsnap', '>= 1.1.0', require: false
 
 # Use figaro to configure env vars
 gem 'figaro'
+# Use devise for authentication
+gem 'devise'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
