--- a/api/Gemfile
+++ b/api/Gemfile
@@ -32,6 +32,7 @@ gem 'bootsnap', '>= 1.1.0', require: false
 gem 'figaro'
 # Use devise for authentication
 gem 'devise'
+gem 'simple_token_authentication', '~> 1.0'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
