--- a/api/Gemfile
+++ b/api/Gemfile
@@ -33,6 +33,7 @@ gem 'figaro'
 # Use devise for authentication
 gem 'devise'
 gem 'devise-jwt'
+gem 'jwt'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
@@ -53,6 +54,7 @@ group :development do
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
   gem 'spring-watcher-listen', '~> 2.0.0'
+  gem 'pry'
 end
 
 
