--- a/api/Gemfile
+++ b/api/Gemfile
@@ -32,6 +32,7 @@ gem 'bootsnap', '>= 1.1.0', require: false
 gem 'figaro'
 # Use devise for authentication
 gem 'devise'
+gem 'devise_token_auth'
 gem 'jwt'
 
 group :development, :test do
