--- a/api/Gemfile
+++ b/api/Gemfile
@@ -35,6 +35,10 @@ gem 'devise'
 gem 'devise_token_auth'
 gem 'omniauth'
 gem 'jwt'
+# Use for uploads
+gem 'carrierwave'
+gem 'mini_magick'
+gem 'fog'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
