--- a/api/Gemfile
+++ b/api/Gemfile
@@ -38,7 +38,7 @@ gem 'jwt'
 # Use for uploads
 gem 'carrierwave'
 gem 'mini_magick'
-gem 'fog'
+gem 'fog-aws'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
